logback配置使用-2（推荐logback-spring.xml中配置），实现分离Error和Info+其他且每天一个日志文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
-logging:
-  pattern:
-    console: "%d - %msg%n"
-  path: D:/log/tomcat/
-  file: D:/log/tomcat/sell.log
-  level:
-    com.flamingo.sell.LoggerTest: debug
-#  level: debug
+#logging:
+#  pattern:
+#    console: "%d - %msg%n"
+#  path: D:/log/tomcat/
+#  file: D:/log/tomcat/sell.log
+#  level:
+#    com.flamingo.sell.LoggerTest: debug
+##  level: debug
