--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,5 @@ spring:
     url: jdbc:mysql://192.168.1.38:3306/sell?characterEncoding=utf-8&useSSL=true
   jpa:
     show-sql: true
+server:
+  context-path: /sell
