买家订单api-添加json转换工具的依赖

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+        <!--json转换的工具-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
