--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://192.168.1.38:3306/sell?characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://192.168.171.148:3306/sell?characterEncoding=utf-8&useSSL=true
   jpa:
     show-sql: true
+  # 全局配置不返回值为null的字段到前端
+  jackson:
+    default-property-inclusion: non_null
 server:
   context-path: /sell
